--- a/requirements.txt
+++ b/requirements.txt
@@ -1,172 +1,11 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-# _libgcc_mutex==0.1
-# _openmp_mutex==5.1
-absl-py==1.0.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==4.1.0
-blessings==1.7
-brotlipy==0.7.0
-ca-certificates==2022.4.26
-cached-property==1.5.2
-cachetools==5.0.0
-certifi==2022.5.18.1
-cffi==1.15.0
-charset-normalizer==2.0.12
-click==8.0.4
-dbus==1.13.18
-debugpy==1.5.1
-decorator==5.1.1
-defusedxml==0.7.1
-dpcpp-cpp-rt==2022.1.0
-entrypoints==0.4
-expat==2.4.4
-fairscale==0.4.4
-filelock==3.6.0
-fontconfig==2.13.1
-freetype==2.11.0
-glib==2.69.1
-google-auth==2.6.2
-google-auth-oauthlib==0.4.6
-gpustat==0.6.0
-grpcio==1.45.0
-gst-plugins-base==1.14.0
-gstreamer==1.14.0
-h5py==3.6.0
-huggingface-hub==0.4.0
-icu==58.2
-idna==3.3
-imbalanced-learn==0.9.0
-imblearn==0.0
-importlib-metadata==4.11.3
-importlib_metadata==4.11.3
-importlib_resources==5.2.0
-intel-cmplr-lib-rt==2022.1.0
-intel-cmplr-lic-rt==2022.1.0
-intel-opencl-rt==2022.1.0
-intel-openmp==2022.1.0
-ipykernel==6.9.1
-ipython==7.31.1
-ipython_genutils==0.2.0
-ipywidgets==7.6.5
-jedi==0.18.1
-jieba==0.42.1
-jinja2==3.0.3
-joblib==1.1.0
-jpeg==9e
-jsonschema==4.4.0
-jupyter==1.0.0
-jupyter_client==7.2.2
-jupyter_console==6.4.3
-jupyter_core==4.10.0
-jupyterlab_pygments==0.1.2
-jupyterlab_widgets==1.0.0
-ld_impl_linux-64==2.38
-libffi==3.3
-libgcc-ng==11.2.0
-libgomp==11.2.0
-libpng==1.6.37
-libsodium==1.0.18
-libstdcxx-ng==11.2.0
-libuuid==1.0.3
-libxcb==1.15
-libxml2==2.9.14
-markdown==3.3.6
-markupsafe==2.0.1
-matplotlib-inline==0.1.2
-mistune==0.8.4
-mkl==2022.1.0
-mkl-fft==1.3.1
-mkl-service==2.4.0
-nbclient==0.5.13
-nbconvert==6.4.4
-nbformat==5.3.0
-ncurses==6.3
-nest-asyncio==1.5.5
-notebook==6.4.11
-numpy==1.21.6
-nvidia-ml-py3==7.352.0
-oauthlib==3.2.0
+# pip install torch==1.12.1+cu113 torchvision==0.13.1+cu113 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu113
 opencv-python==4.5.5.64
-openssl==1.1.1o
-packaging==21.3
-pandas==1.3.5
-pandocfilters==1.5.0
-parso==0.8.3
-pcre==8.45
-pexpect==4.8.0
-pickleshare==0.7.5
-pillow==9.0.1
-pip==21.2.2
-prometheus_client==0.13.1
-prompt-toolkit==3.0.20
-prompt_toolkit==3.0.20
-protobuf==3.19.4
-psutil==5.9.0
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pygments==2.11.2
-pyparsing==3.0.7
-pyqt==5.9.2
-pyrsistent==0.18.0
-python-dateutil==2.8.2
-python-fastjsonschema==2.15.1
-pytz==2022.1
-pyyaml==6.0
-pyzmq==22.3.0
-qt==5.9.7
-qtconsole==5.3.0
-qtpy==2.0.1
-readline==8.1.2
-regex==2022.3.15
-requests==2.27.1
-requests-oauthlib==1.3.1
-rsa==4.8
-ruamel_yaml==0.15.100
-sacremoses==0.0.49
-scikit-learn==1.0.2
-scipy==1.7.3
-send2trash==1.8.0
-setuptools==61.2.0
-sip==4.19.8
-six==1.16.0
-sklearn==0.0
-soupsieve==2.3.1
-sqlite==3.38.3
-tbb==2021.6.0
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-terminado==0.13.1
-testpath==0.5.0
-threadpoolctl==3.1.0
 timm==0.4.12
-tk==8.6.11
-tokenizers==0.10.3
-torch==1.11.0
-torchaudio==0.11.0
-torchvision==0.12.0
-tornado==6.1
-tqdm==4.63.1
-traitlets==5.1.1
 transformers==4.15.0
-typing-extensions==4.2.0
-typing_extensions==4.1.1
-urllib3==1.26.9
-wcwidth==0.2.5
-webencodings==0.5.1
-werkzeug==2.0.3
-wheel==0.37.1
-widgetsnbextension==3.5.2
-xz==5.2.5
-yaml==0.2.5
-zeromq==4.3.4
-zipp==3.7.0
-zlib==1.2.12
+fairscale==0.4.4
+ruamel_yaml==0.15.100
+pandas==1.3.5
+tensorflow==2.9.1
+jieba==0.42.1
+pydicom==2.4.3
+pycocoevalcap
