fix eval, and training log

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ annotations/mimic_annotation.json
 annotations/mimic_train_kg_AO.json
 /DATA1/bzhu/DCL/annotations/*
 /runs/
+/records/generated_records/*
+/results/test/*
+/results/fair/*
 
 # Python files to ignore
 *.pyc
